# TOPPLE

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_topple_gse173706.py  run_topple_trm.py  run_topple_trm_v2.py  setup_and_diagnose.py
.github/workflows/: ci.yml
examples/: end_to_end_trm.py  full_pipeline_spatial.py  psoriasis_proof_of_concept.py  synthetic_trm.py
scripts/: README.md  diagnose.py  explore_and_run.py  run_topple_trm_v2.py
tests/: test_data.py  test_layer1.py  test_layer2.py  test_layer3.py
topple/: __init__.py  compressed_sensing.py  mobius.py  pruning.py  stability.py
topple/data/: __init__.py  loader.py
topple/layer2/: __init__.py  bridge.py  destabilization.py  perturbation_engine.py  target_selection.py
topple/layer3/: __init__.py  niche.py  pipeline.py  spatial_buffering.py  vulnerability.py
topple_results_GSE173706/: CD8+Trm_L1_interactions.tsv  CD8+Trm_L1_variance.tsv  DE_scores.tsv  L1_interactions.tsv  L1_variance.tsv  L2_report.txt  TOPPLE_report.txt
